# machine_learning

./: .gitignore
KNN/: knn.ipynb  knn.py
practice/neural_networks/bccd/: bccd.ipynb  bccd_utils.py  main.py  ood_detection.py  ood_external_malaria.py  prepare_bccd_data.py  pyproject.toml  requirements.txt  train_count_regression.py  train_yolo_counting.py
practice/neural_networks/bccd/artifacts/detection/: metrics.json  test_count_predictions.csv
practice/neural_networks/bccd/artifacts/detection/yolo_dataset/: bccd.yaml
practice/neural_networks/bccd/bccd_work/: bccd_dataset.csv  metrics.json
practice/neural_networks/bccd/bccd_work/yolo_dataset/: bccd.yaml
practice/neural_networks/carvana/: __init__.py  __main__.py  carvana.ipynb  main.py  pyproject.toml  requirements.txt
practice/neural_networks/carvana/carvana_work/reports/: bce_eval.csv  bce_highres_eval.csv  combined_history.csv  custom_unet_dice_highres_history.csv  custom_unet_dice_history.csv  customunet_eval.csv  customunet_highres_eval.csv  diceloss_eval.csv  diceloss_highres_eval.csv  smp_unet_bce_highres_history.csv  smp_unet_bce_history.csv  smp_unet_dice_highres_history.csv  smp_unet_dice_history.csv  unet_summary.csv
practice/neural_networks/carvana/core/: __init__.py  config.py
practice/neural_networks/carvana/datasets/: __init__.py  carvana_data.py
practice/neural_networks/carvana/modeling/: __init__.py  custom_unet.py  segmentation.py
practice/neural_networks/carvana/training/: __init__.py  engine.py
practice/neural_networks/carvana/visualization/: __init__.py  plots.py
(+46 files in other folders)
